quality/test/garant6x/DelphiScriptParser/DSParser/src/dsparser/antlr/generated/DelphiScriptParser.java
// $ANTLR 3.3 Nov 30, 2010 12:45:30 W:\\quality\\test\\garant6x\\DelphiScriptParser\\ANTLRGrammars\\DelphiScript.g 2011-08-08 22:14:58

	package dsparser.antlr.generated;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;


import org.antlr.runtime.tree.*;

public class DelphiScriptParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "FORMAL_PARAMETER", "ACTUAL_PARAMETER", "METHOD_DECL", "METHOD_DEF", "BLOCK", "QUALIFIED_IDENT", "METHOD_CALL", "INDEX", "QUALIFIED_ACCESS", "IMPL_DECL", "CASE_SELECTOR", "CONST_ARRAY", "FORWARD", "SEMI", "BEGIN", "END", "COLON", "BREAK", "RAISE", "TRY", "FINALLY", "EXCEPT", "WITH", "DO", "FOR", "ASSIGN", "TO", "DOWNTO", "WHILE", "REPEAT", "UNTIL", "CASE", "OF", "ELSE", "COMMA", "IF", "THEN", "GOTO", "VAR", "LABEL", "INT", "USES", "PLUS", "MINUS", "OR", "XOR", "STAR", "SLASH", "DIV", "MOD", "AND", "SHL", "SHR", "DOT", "LSQBR", "RSQBR", "LPAREN", "RPAREN", "STRING_LITERAL", "NIL", "FALSE", "TRUE", "RESULT", "EXCEPTIONMESSAGE", "FLOAT", "HEX", "NOT", "ARRAY", "STRING", "CONST", "EQUAL", "PROCEDURE", "FUNCTION", "OUT", "FILE", "ID", "NOT_EQUAL", "LT", "LE", "GE", "GT", "IN", "DOTDOT", "D", "I", "V", "M", "O", "A", "N", "R", "X", "S", "H", "L", "T", "Y", "F", "E", "SET", "B", "G", "P", "C", "U", "W", "UNIT", "K", "AT", "AMPERSAND", "POINTER", "J", "Q", "Z", "EXPONENT", "RANGE_OR_INT", "COMMENT", "WS", "CHAR_LITERAL", "HEX_DIGIT"
    };
    public static final int EOF=-1;
    public static final int FORMAL_PARAMETER=4;
    public static final int ACTUAL_PARAMETER=5;
    public static final int METHOD_DECL=6;
    public static final int METHOD_DEF=7;
    public static final int BLOCK=8;
    public static final int QUALIFIED_IDENT=9;
    public static final int METHOD_CALL=10;
    public static final int INDEX=11;
    public static final int QUALIFIED_ACCESS=12;
    public static final int IMPL_DECL=13;
    public static final int CASE_SELECTOR=14;
    public static final int CONST_ARRAY=15;
    public static final int FORWARD=16;
    public static final int SEMI=17;
    public static final int BEGIN=18;
    public static final int END=19;
    public static final int COLON=20;
    public static final int BREAK=21;
    public static final int RAISE=22;
    public static final int TRY=23;
    public static final int FINALLY=24;
    public static final int EXCEPT=25;
    public static final int WITH=26;
    public static final int DO=27;
    public static final int FOR=28;
    public static final int ASSIGN=29;
    public static final int TO=30;
    public static final int DOWNTO=31;
    public static final int WHILE=32;
    public static final int REPEAT=33;
    public static final int UNTIL=34;
    public static final int CASE=35;
    public static final int OF=36;
    public static final int ELSE=37;
    public static final int COMMA=38;
    public static final int IF=39;
    public static final int THEN=40;
    public static final int GOTO=41;
    public static final int VAR=42;
    public static final int LABEL=43;
    public static final int INT=44;
    public static final int USES=45;
    public static final int PLUS=46;
    public static final int MINUS=47;
    public static final int OR=48;
    public static final int XOR=49;
    public static final int STAR=50;
    public static final int SLASH=51;
    public static final int DIV=52;
    public static final int MOD=53;
    public static final int AND=54;
    public static final int SHL=55;
    public static final int SHR=56;
    public static final int DOT=57;
    public static final int LSQBR=58;
    public static final int RSQBR=59;
    public static final int LPAREN=60;
    public static final int RPAREN=61;
    public static final int STRING_LITERAL=62;
    public static final int NIL=63;
    public static final int FALSE=64;
    public static final int TRUE=65;
    public static final int RESULT=66;
    public static final int EXCEPTIONMESSAGE=67;
    public static final int FLOAT=68;
    public static final int HEX=69;
    public static final int NOT=70;
    public static final int ARRAY=71;
    public static final int STRING=72;
    public static final int CONST=73;
    public static final int EQUAL=74;
    public static final int PROCEDURE=75;
    public static final int FUNCTION=76;
    public static final int OUT=77;
    public static final int FILE=78;
    public static final int ID=79;
    public static final int NOT_EQUAL=80;
    public static final int LT=81;
    public static final int LE=82;
    public static final int GE=83;
    public static final int GT=84;
    public static final int IN=85;
    public static final int DOTDOT=86;
    public static final int D=87;
    public static final int I=88;
    public static final int V=89;
    public static final int M=90;
    public static final int O=91;
    public static final int A=92;
    public static final int N=93;
    public static final int R=94;
    public static final int X=95;
    public static final int S=96;
    public static final int H=97;
    public static final int L=98;
    public static final int T=99;
    public static final int Y=100;
    public static final int F=101;
    public static final int E=102;
    public static final int SET=103;
    public static final int B=104;
    public static final int G=105;
    public static final int P=106;
    public static final int C=107;
    public static final int U=108;
    public static final int W=109;
    public static final int UNIT=110;
    public static final int K=111;
    public static final int AT=112;
    public static final int AMPERSAND=113;
    public static final int POINTER=114;
    public static final int J=115;
    public static final int Q=116;
    public static final int Z=117;
    public static final int EXPONENT=118;
    public static final int RANGE_OR_INT=119;
    public static final int COMMENT=120;
    public static final int WS=121;
    public static final int CHAR_LITERAL=122;
    public static final int HEX_DIGIT=123;

    // delegates
    // delegators


        public DelphiScriptParser(TokenStream input) {
            this(input, new RecognizerSharedState());
        }
        public DelphiScriptParser(TokenStream input, RecognizerSharedState state) {
            super(input, state);
             
        }
        
    protected TreeAdaptor adaptor = new CommonTreeAdaptor();

    public void setTreeAdaptor(TreeAdaptor adaptor) {
        this.adaptor = adaptor;
    }
    public TreeAdaptor getTreeAdaptor() {
        return adaptor;
    }

    public String[] getTokenNames() { return DelphiScriptParser.tokenNames; }
    public String getGrammarFileName() { return "W:\\quality\\test\\garant6x\\DelphiScriptParser\\ANTLRGrammars\\DelphiScript.g"; }


    public static class goal_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "goal"
    // W:\\quality\\test\\garant6x\\DelphiScriptParser\\ANTLRGrammars\\DelphiScript.g:36:1: goal : sdUnit ;
    public final DelphiScriptParser.goal_return goal() throws RecognitionException {
        DelphiScriptParser.goal_return retval = new DelphiScriptParser.goal_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        DelphiScriptParser.sdUnit_return sdUnit1 = null;



        try {
            // W:\\quality\\test\\garant6x\\DelphiScriptParser\\ANTLRGrammars\\DelphiScript.g:37:2: ( sdUnit )
            // W:\\quality\\test\\garant6x\\DelphiScriptParser\\ANTLRGrammars\\DelphiScript.g:37:5: sdUnit
            {
            root_0 = (CommonTree)adaptor.nil();

            pushFollow(FOLLOW_sdUnit_in_goal110);
            sdUnit1=sdUnit();

            state._fsp--;

            adaptor.addChild(root_0, sdUnit1.getTree());

            }

            retval.stop = input.LT(-1);

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "goal"

    public static class sdUnit_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "sdUnit"
    // W:\\quality\\test\\garant6x\\DelphiScriptParser\\ANTLRGrammars\\DelphiScript.g:40:1: sdUnit : ( usesClause )? ( implementationDecl )* -> ^( UNIT ( usesClause )? ^( IMPL_DECL ( implementationDecl )* ) ) ;
    public final DelphiScriptParser.sdUnit_return sdUnit() throws RecognitionException {
        DelphiScriptParser.sdUnit_return retval = new DelphiScriptParser.sdUnit_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        DelphiScriptParser.usesClause_return usesClause2 = null;

        DelphiScriptParser.implementationDecl_return implementationDecl3 = null;


        RewriteRuleSubtreeStream stream_usesClause=new RewriteRuleSubtreeStream(adaptor,"rule usesClause");
        RewriteRuleSubtreeStream stream_implementationDecl=new RewriteRuleSubtreeStream(adaptor,"rule implementationDecl");
        try {
            // W:\\quality\\test\\garant6x\\DelphiScriptParser\\ANTLRGrammars\\DelphiScript.g:41:2: ( ( usesClause )? ( implementationDecl )* -> ^( UNIT ( usesClause )? ^( IMPL_DECL ( implementationDecl )* ) ) )
            // W:\\quality\\test\\garant6x\\DelphiScriptParser\\ANTLRGrammars\\DelphiScript.g:41:4: ( usesClause )? ( implementationDecl )*
            {
            // W:\\quality\\test\\garant6x\\DelphiScriptParser\\ANTLRGrammars\\DelphiScript.g:41:4: ( usesClause )?
            int alt1=2;
            int LA1_0 = input.LA(1);

            if ( (LA1_0==USES) ) {
                alt1=1;
            }
            switch (alt1) {
                case 1 :
                    // W:\\quality\\test\\garant6x\\DelphiScriptParser\\ANTLRGrammars\\DelphiScript.g:41:4: usesClause
                    {
                    pushFollow(FOLLOW_usesClause_in_sdUnit122);
                    usesClause2=usesClause();

                    state._fsp--;

                    stream_usesClause.add(usesClause2.getTree());

                    }
                    break;

            }

            // W:\\quality\\test\\garant6x\\DelphiScriptParser\\ANTLRGrammars\\DelphiScript.g:42:3: ( implementationDecl )*
            loop2:
            do {
                int alt2=2;
                int LA2_0 = input.LA(1);

                if ( ((LA2_0>=VAR && LA2_0<=LABEL)||LA2_0==CONST||(LA2_0>=PROCEDURE && LA2_0<=FUNCTION)) ) {
                    alt2=1;
                }


                switch (alt2) {
            	case 1 :
            	    // W:\\quality\\test\\garant6x\\DelphiScriptParser\\ANTLRGrammars\\DelphiScript.g:42:3: implementationDecl
            	    {
            	    pushFollow(FOLLOW_implementationDecl_in_sdUnit128);
            	    implementationDecl3=implementationDecl();

            	    state._fsp--;

            	    stream_implementationDecl.add(implementationDecl3.getTree());

            	    }
            	    break;

            	default :
            	    break loop2;
                }
            } while (true);



            // AST REWRITE
            // elements: usesClause, implementationDecl
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (CommonTree)adaptor.nil();
            // 43:3: -> ^( UNIT ( usesClause )? ^( IMPL_DECL ( implementationDecl )* ) )
            {
                // W:\\quality\\test\\garant6x\\DelphiScriptParser\\ANTLRGrammars\\DelphiScript.g:43:6: ^( UNIT ( usesClause )? ^( IMPL_DECL ( implementationDecl )* ) )
                {
                CommonTree root_1 = (CommonTree)adaptor.nil();
                root_1 = (CommonTree)adaptor.becomeRoot((CommonTree)adaptor.create(UNIT, "UNIT"), root_1);

                // W:\\quality\\test\\garant6x\\DelphiScriptParser\\ANTLRGrammars\\DelphiScript.g:43:13: ( usesClause )?
                if ( stream_usesClause.hasNext() ) {
                    adaptor.addChild(root_1, stream_usesClause.nextTree());

                }
                stream_usesClause.reset();
                // W:\\quality\\test\\garant6x\\DelphiScriptParser\\ANTLRGrammars\\DelphiScript.g:43:25: ^( IMPL_DECL ( implementationDecl )* )
                {
                CommonTree root_2 = (CommonTree)adaptor.nil();
                root_2 = (CommonTree)adaptor.becomeRoot((CommonTree)adaptor.create(IMPL_DECL, "IMPL_DECL"), root_2);

                // W:\\quality\\test\\garant6x\\DelphiScriptParser\\ANTLRGrammars\\DelphiScript.g:43:37: ( implementationDecl )*
                while ( stream_implementationDecl.hasNext() ) {
                    adaptor.addChild(root_2, stream_implementationDecl.nextTree());

                }
                stream_implementationDecl.reset();

                adaptor.addChild(root_1, root_2);
                }

                adaptor.addChild(root_0, root_1);
                }

            }

            retval.tree = root_0;
            }

            retval.stop = input.LT(-1);

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "sdUnit"

    public static class implementationDecl_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "implementationDecl"
    // W:\\quality\\test\\garant6x\\DelphiScriptParser\\ANTLRGrammars\\DelphiScript.g:47:1: implementationDecl : ( labelDeclSection | constSection | varSection | methodImplOrForwardDecl );
    public final DelphiScriptParser.implementationDecl_return implementationDecl() throws RecognitionException {
        DelphiScriptParser.implementationDecl_return retval = new DelphiScriptParser.implementationDecl_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        DelphiScriptParser.labelDeclSection_return labelDeclSection4 = null;

        DelphiScriptParser.constSection_return constSection5 = null;

        DelphiScriptParser.varSection_return varSection6 = null;

        DelphiScriptParser.methodImplOrForwardDecl_return methodImplOrForwardDecl7 = null;



        try {
            // W:\\quality\\test\\garant6x\\DelphiScriptParser\\ANTLRGrammars\\DelphiScript.g:48:2: ( labelDeclSection | constSection | varSection | methodImplOrForwardDecl )
            int alt3=4;
            switch ( input.LA(1) ) {
            case LABEL:
                {
                alt3=1;
                }
                break;
            case CONST:
                {
                alt3=2;
                }
                break;
            case VAR:
                {
                alt3=3;
                }
                break;
            case PROCEDURE:
            case FUNCTION:
                {
                alt3=4;
                }
                break;
            default:
                NoViableAltException nvae =
                    new NoViableAltException("", 3, 0, input);

                throw nvae;
            }

            switch (alt3) {
                case 1 :
                    // W:\\quality\\test\\garant6x\\DelphiScriptParser\\ANTLRGrammars\\DelphiScript.g:48:5: labelDeclSection
                    {
                    root_0 = (CommonTree)adaptor.nil();

                    pushFollow(FOLLOW_labelDeclSection_in_implementationDecl160);
                    labelDeclSection4=labelDeclSection();

                    state._fsp--;

                    adaptor.addChild(root_0, labelDeclSection4.getTree());

                    }
                    break;
                case 2 :
                    // W:\\quality\\test\\garant6x\\DelphiScriptParser\\ANTLRGrammars\\DelphiScript.g:49:4: constSection
                    {
                    root_0 = (CommonTree)adaptor.nil();

                    pushFollow(FOLLOW_constSection_in_implementationDecl165);
                    constSection5=constSection();

                    state._fsp--;

                    adaptor.addChild(root_0, constSection5.getTree());

                    }
                    break;
                case 3 :
                    // W:\\quality\\test\\garant6x\\DelphiScriptParser\\ANTLRGrammars\\DelphiScript.g:50:4: varSection
                    {
                    root_0 = (CommonTree)adaptor.nil();

                    pushFollow(FOLLOW_varSection_in_implementationDecl170);
                    varSection6=varSection();

                    state._fsp--;

                    adaptor.addChild(root_0, varSection6.getTree());

                    }
                    break;
                case 4 :
                    // W:\\quality\\test\\garant6x\\DelphiScriptParser\\ANTLRGrammars\\DelphiScript.g:51:4: methodImplOrForwardDecl
                    {
                    root_0 = (CommonTree)adaptor.nil();

                    pushFollow(FOLLOW_methodImplOrForwardDecl_in_implementationDecl175);
                    methodImplOrForwardDecl7=methodImplOrForwardDecl();

                    state._fsp--;

                    adaptor.addChild(root_0, methodImplOrForwardDecl7.getTree());

                    }
                    break;

            }
            retval.stop = input.LT(-1);

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "implementationDecl"

    public static class methodImplOrForwardDecl_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "methodImplOrForwardDecl"
    // W:\\quality\\test\\garant6x\\DelphiScriptParser\\ANTLRGrammars\\DelphiScript.g:54:1: methodImplOrForwardDecl : methodHeading ( fancyBlock -> ^( METHOD_DEF methodHeading fancyBlock ) | FORWARD -> ^( METHOD_DECL methodHeading ) ) SEMI ;
    public final DelphiScriptParser.methodImplOrForwardDecl_return methodImplOrForwardDecl() throws RecognitionException {
        DelphiScriptParser.methodImplOrForwardDecl_return retval = new DelphiScriptParser.methodImplOrForwardDecl_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        Token FORWARD10=null;
        Token SEMI11=null;
        DelphiScriptParser.methodHeading_return methodHeading8 = null;

        DelphiScriptParser.fancyBlock_return fancyBlock9 = null;


        CommonTree FORWARD10_tree=null;
        CommonTree SEMI11_tree=null;
        RewriteRuleTokenStream stream_FORWARD=new RewriteRuleTokenStream(adaptor,"token FORWARD");
        RewriteRuleTokenStream stream_SEMI=new RewriteRuleTokenStream(adaptor,"token SEMI");
        RewriteRuleSubtreeStream stream_methodHeading=new RewriteRuleSubtreeStream(adaptor,"rule methodHeading");
        RewriteRuleSubtreeStream stream_fancyBlock=new RewriteRuleSubtreeStream(adaptor,"rule fancyBlock");
        try {
            // W:\\quality\\test\\garant6x\\DelphiScriptParser\\ANTLRGrammars\\DelphiScript.g:55:2: ( methodHeading ( fancyBlock -> ^( METHOD_DEF methodHeading fancyBlock ) | FORWARD -> ^( METHOD_DECL methodHeading ) ) SEMI )
            // W:\\quality\\test\\garant6x\\DelphiScriptParser\\ANTLRGrammars\\DelphiScript.g:55:4: methodHeading ( fancyBlock -> ^( METHOD_DEF methodHeading fancyBlock ) | FORWARD -> ^( METHOD_DECL methodHeading ) ) SEMI
            {
            pushFollow(FOLLOW_methodHeading_in_methodImplOrForwardDecl186);
            methodHeading8=methodHeading();

            state._fsp--;

            stream_methodHeading.add(methodHeading8.getTree());
            // W:\\quality\\test\\garant6x\\DelphiScriptParser\\ANTLRGrammars\\DelphiScript.g:56:3: ( fancyBlock -> ^( METHOD_DEF methodHeading fancyBlock ) | FORWARD -> ^( METHOD_DECL methodHeading ) )
            int alt4=2;
            int LA4_0 = input.LA(1);

            if ( (LA4_0==BEGIN||(LA4_0>=VAR && LA4_0<=LABEL)||LA4_0==CONST||(LA4_0>=PROCEDURE && LA4_0<=FUNCTION)) ) {
                alt4=1;
            }
            else if ( (LA4_0==FORWARD) ) {
                alt4=2;
            }
            else {
                NoViableAltException nvae =
                    new NoViableAltException("", 4, 0, input);

                throw nvae;
            }
            switch (alt4) {
                case 1 :
                    // W:\\quality\\test\\garant6x\\DelphiScriptParser\\ANTLRGrammars\\DelphiScript.g:57:4: fancyBlock
                    {
                    pushFollow(FOLLOW_fancyBlock_in_methodImplOrForwardDecl196);
                    fancyBlock9=fancyBlock();

                    state._fsp--;

                    stream_fancyBlock.add(fancyBlock9.getTree());


                    // AST REWRITE
                    // elements: fancyBlock, methodHeading
                    // token labels: 
                    // rule labels: retval
                    // token list labels: 
                    // rule list labels: 
                    // wildcard labels: 
                    retval.tree = root_0;
                    RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);
